# img-metadata

./: CMakeLists.txt  README.md
src/: file.cpp  file.h  image.cpp  image.h  main.cpp
tests/: test_image.cpp
